[metadata]
name = networking-romana
summary = Romana Networking
description-file =
    README.rst
author = Romana
author-email = openstack@romana.io
home-page = http://www.romana.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    networking_romana
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_romana.ini

[entry_points]
neutron.ml2.mechanism_drivers =
    romana = networking_romana.driver.mech_romana:RomanaMechanismDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_romana/locale
domain = networking-romana

[update_catalog]
domain = networking-romana
output_dir = networking_romana/locale
input_file = networking_romana/locale/networking-romana.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_romana/locale/networking-romana.pot
